# i3-screen-util

./: CHANGELOG.md  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/: __init__.py  args.py  lockscreen.py  monitor_controller.py  workspace_formatter.py
src/i3_screen_util/: workspace_formatter.py
tests/: test_integration.py
